--- a/php-ocls/privacy_policy.html
+++ b/php-ocls/privacy_policy.html
@@ -1,1 +1,23 @@
-<p>Sample Privacy Policy<br></p>
+<p>
+<h3>Privacy Policy</h3> 
+Effective Date: 26 June 2023
+At Pulse Tech, we value your privacy and are committed to protecting your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our services or interact with our website. By using our services, you consent to the data practices described in this policy.
+Information We Collect:
+We may collect personal information from you when you voluntarily provide it to us, such as when you register an account, make a purchase, or communicate with us. The types of personal information we may collect include:
+Name, Contact information (email address, phone number, etc.). Billing and payment details. User-generated content (comments, reviews, etc.). Usage data (IP address, browser type, device information, etc.). Other information you provide to us voluntarily. Use of Your Information. We may use the information we collect for various purposes, including:
+Providing and personalizing our services. Processing transactions and delivering products or services. Improving our website, products, and services. Communicating with you and responding to your inquiries. Sending you promotional offers and updates (with your consent). Protecting against fraud and ensuring the security of our systems. Complying with legal obligations. Disclosure of Your Information. We may share your personal information with third parties under certain circumstances, including:
+Service providers and business partners who assist us in delivering our services and operating our business. Law enforcement agencies, government authorities, or other third parties when required by law or to protect our legal rights. Other parties in connection with a corporate transaction, such as a merger, acquisition, or sale of assets. We will not sell, rent, or lease your personal information to third parties for marketing purposes without your consent.
+Data Security:
+We take reasonable measures to protect the security of your personal information and prevent unauthorized access, disclosure, or alteration. However, please note that no method of transmission or storage can be 100% secure, and we cannot guarantee absolute security.
+Your Choices:
+You have certain rights and choices regarding the collection and use of your personal information. You may:
+Access, update, or delete your personal information by contacting us. Opt-out of receiving promotional communications. Disable cookies through your browser settings. Decline to provide certain information, although it may impact your ability to use certain features of our services.
+Children's Privacy:
+Our services are not intended for children under the age of 16. We do not knowingly collect personal information from children. If you believe that we have unintentionally collected information from a child, please contact us immediately.
+Updates to this Policy:
+We may update this Privacy Policy from time to time. The revised policy will be posted on our website with the updated effective date. We encourage you to review the policy periodically to stay informed about how we collect, use, and protect your information.
+Contact Us:
+If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us at privacy@pulsetech.com.
+Thank you for trusting Pulse Tech with your personal information.
+
+</p>
